@@ -24,6 +24,7 @@
                                                     <http://www.w3.org/ns/dcat3> ,
                                                     ssn:ext ,
                                                     <http://www.w3.org/ns/ssn/systems/> ,
+                                                    <http://xmlns.com/foaf/0.1/> ,
                                                     <https://w3id.org/iadopt/ont/1.0.3> ;
                                         rdfs:comment "An ontology for the recording of dataset metadata, provenance information and related reference data for use in the fine-grained metadata store element of the FDRI project."@en ;
                                         rdfs:label "FDRI Fine-grained Metadata Store Ontology"@en ;
@@ -824,7 +825,8 @@ geo:long rdf:type owl:DatatypeProperty ;
 ###  http://fdri.ceh.ac.uk/vocab/metadata/Agent
 :Agent rdf:type owl:Class ;
        rdfs:subClassOf dcat:Resource ,
-                       prov:Agent ;
+                       prov:Agent ,
+                       <http://xmlns.com/foaf/0.1/Agent> ;
        rdfs:comment "An Agent is something that has responsibility for an activity that takes place, for the existence or modification of some resource, or for the activity of another Agent."@en ;
        rdfs:label "Agent"@en .
 
@@ -1812,14 +1814,17 @@ It is recommended that every dataset should specify the feature(s) of interest (
 
 ###  http://fdri.ceh.ac.uk/vocab/metadata/Organization
 :Organization rdf:type owl:Class ;
-              rdfs:subClassOf :Agent ;
+              rdfs:subClassOf :Agent ,
+                              <http://xmlns.com/foaf/0.1/Group> ,
+                              <http://xmlns.com/foaf/0.1/Organization> ;
               rdfs:comment "A social or legal institution such as a company, society etc."@en ;
               rdfs:label "Organization"@en .
 
 
 ###  http://fdri.ceh.ac.uk/vocab/metadata/Person
 :Person rdf:type owl:Class ;
-        rdfs:subClassOf :Agent ;
+        rdfs:subClassOf :Agent ,
+                        <http://xmlns.com/foaf/0.1/Person> ;
         rdfs:comment "A natural person."@en ;
         rdfs:label "Person"@en .
 
